--- a/package.json
+++ b/package.json
@@ -3,32 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^80.0.0",
+    "@emotion/css": "^11.11.0",
+    "@emotion/react": "^11.11.0",
     "@refinedev/cli": "^2.5.1",
     "@refinedev/core": "^4.5.8",
     "@refinedev/inferencer": "^3.1.4",
     "@refinedev/kbar": "^1.1.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/simple-rest": "^4.0.0",
     "@refinedev/react-hook-form": "^4.1.2",
-    "@refinedev/react-table": "^5.0.0",
     "@refinedev/react-router-v6": "^4.1.0",
+    "@refinedev/react-table": "^5.0.0",
+    "@refinedev/simple-rest": "^4.0.0",
     "i18next": "^20.1.0",
-    "react-i18next": "^11.8.11",
     "i18next-browser-languagedetector": "^6.1.1",
-    "i18next-xhr-backend": "^3.2.2"
+    "i18next-xhr-backend": "^3.2.2",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.11",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/node": "^12.20.11",
-    "typescript": "^4.7.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^29.2.4",
+    "@types/node": "^12.20.11",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
